Add card CSS co-author by: Ryan <ryan@flachman.net>

--- a/index.html
+++ b/index.html
@@ -38,21 +38,30 @@
 			</form>
 		</section>
 		<section class="bottom-section">
-			<div>
-				<article>
-					<img src="">
-					<img src="">
+			<div class="idea-card">
+				<article class="idea-card-header">
+					<img src="images/star.svg">
+					<img src="images/delete.svg">
 				</article>
-				<article>
-					<h3></h3>
-					<p></p>
+				<article class="idea-card-body">
+					<h3 class="idea-card-title">Idea title</h3>
+					<p class="idea-card-content">Idea body, is here and is everything is good bla bla bla.</p>
 				</article>
-				<article>
-					<img src="">
-					<p></p>
-					<img src="">
+				<article class=idea-card-footer>
+					<img src="images/upvote.svg">
+					<p>Quality: Swill</p>
+					<img src="images/downvote.svg">
 				</article>
 			</div>
+			<div class='idea-card'></div>
+			<div class='idea-card'></div>
+			<div class='idea-card'></div>
+			<div class='idea-card'></div>
+			<div class='idea-card'></div>
+			<div class='idea-card'></div>
+			<div class='idea-card'></div>
+			<div class='idea-card'></div>
+			<div class='idea-card'></div>
 		</section>
 	</main>
 <script type="text/javascript" src="idea.js"></script>
