--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</form>
 		</section>
 		<section class="bottom-section">
-			<div class="idea-card">
+			<!-- <div class="idea-card">
 				<article class="idea-card-header">
 					<img src="images/star.svg">
 					<img src="images/delete.svg">
@@ -52,16 +52,7 @@
 					<p>Quality: Swill</p>
 					<img src="images/downvote.svg">
 				</article>
-			</div>
-			<div class='idea-card'></div>
-			<div class='idea-card'></div>
-			<div class='idea-card'></div>
-			<div class='idea-card'></div>
-			<div class='idea-card'></div>
-			<div class='idea-card'></div>
-			<div class='idea-card'></div>
-			<div class='idea-card'></div>
-			<div class='idea-card'></div>
+			</div> -->
 		</section>
 	</main>
 <script type="text/javascript" src="idea.js"></script>
