Change button background

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<li>Plausable</li>
 			<li>Genius</li>
 		</ul>
-		<div class="sidebar-quality-container">
-			<label for="new-quality" class="sidebar-filter-title quality">New Quality</label>
-			<input type="text" name="new-quality" id="new-quality" class="global-input">
-			<input type="button" name="add-new-quality" id="new-quality-btn"class="global-input sidebar-btn quality-btn" value="Add New Quality">
+		<div class="sidebar__quality-container">
+			<label for="new-quality" class="quality-container__filter-title quality">New Quality</label>
+			<input type="text" name="new-quality" id="new-quality" class="quality-container__input global-input">
+			<input type="button" name="add-new-quality" id="new-quality-btn"class="quality-container__quality-btn global-input sidebar-btn" value="Add New Quality">
 	</div>
 	</section>
 	<main>
