Starting of burger button

--- a/index.html
+++ b/index.html
@@ -8,19 +8,30 @@
 </head>
 <body>
 	<section class="sidebar">
-		<h1 class="sidebar__side-title">IdeaBox Redux</h1>
-		<h2 class="side-title__filter-title filter-padding">Filter Starred Ideas</h2>
-		<input type="button" name="show-starred-ideas-btn" class="sidebar-starred-ideas-btn global-input sidebar-btn filter-padding" value="Show Starred Ideas" id="sidebar-starred-ideas-btn">
-		<h2 class="sidebar-filter-title filter-padding">Filter by Quality</h2>
-		<ul>
-			<li>Swill</li>
-			<li>Plausable</li>
-			<li>Genius</li>
-		</ul>
-		<div class="sidebar__quality-container">
-			<label for="new-quality" class="quality-container__filter-title quality">New Quality</label>
-			<input type="text" name="new-quality" id="new-quality" class="quality-container__input global-input">
-			<input type="button" name="add-new-quality" id="new-quality-btn"class="quality-container__quality-btn global-input sidebar-btn" value="Add New Quality">
+			<div class="sidebar__side-container-1">
+					<div class="burger_button">
+							<div class="burger_icon">
+								  <div class="lines line_one"></div>
+								  <div class="lines line_two"></div>
+								  <div class="lines line_three"></div>
+							</div>
+					</div>
+					<h1 class="sidebar__side-title">IdeaBox Redux</h1>
+				</div>
+		<div class="sidebar__side-container-2">
+			<h2 class="side-title__filter-title filter-padding">Filter Starred Ideas</h2>
+			<input type="button" name="show-starred-ideas-btn" class="sidebar-starred-ideas-btn global-input sidebar-btn filter-padding" value="Show Starred Ideas" id="sidebar-starred-ideas-btn">
+			<h2 class="sidebar-filter-title filter-padding">Filter by Quality</h2>
+			<ul>
+				<li>Swill</li>
+				<li>Plausable</li>
+				<li>Genius</li>
+			</ul>
+			<div class="sidebar__quality-container">
+				<label for="new-quality" class="quality-container__filter-title quality">New Quality</label>
+				<input type="text" name="new-quality" id="new-quality" class="quality-container__input global-input">
+				<input type="button" name="add-new-quality" id="new-quality-btn"class="quality-container__quality-btn global-input sidebar-btn" value="Add New Quality">
+		</div>
 	</div>
 	</section>
 	<main>
