--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
 <body>
 	<section class="sidebar">
 			<div class="sidebar__side-container-1">
-					<div class="burger_button">
-							<div class="burger_icon">
-								  <div class="lines line_one"></div>
-								  <div class="lines line_two"></div>
-								  <div class="lines line_three"></div>
-							</div>
-					</div>
-					<h1 class="sidebar__side-title">IdeaBox Redux</h1>
-				</div>
+				<img class="burger_button" src="images/menu.svg">
+				<h1 class="sidebar__side-title">IdeaBox Redux</h1>
+				<button class="burger_button2"></button>
+			</div>
 		<div class="sidebar__side-container-2">
 			<h2 class="side-title__filter-title filter-padding">Filter Starred Ideas</h2>
 			<input type="button" name="show-starred-ideas-btn" class="sidebar-starred-ideas-btn global-input sidebar-btn filter-padding" value="Show Starred Ideas" id="sidebar-starred-ideas-btn">
