Added searched btn

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Idea Box</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -39,7 +40,7 @@
 				<input type="button" name="save-btn" value="Save" class="idea-form__save-btn global-input" id="save-btn">	
 			</form>
 			<form class="top-section__search-form">
-				<input type="button" name="search-btn" class="search-form__search-btn global-input">
+				<button type="button" name="search-btn" class="search-form__search-btn global-input"><i class="fa fa-search"></i></button>
 				<input type="text" name="search-input" class="search-form__search-input global-input">
 				<ul class="search-form__display-list"></ul>
 			</form>
